--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,5 @@
+<div class="center hero-unit">
 <title>DevBatch App Store</title>
-<h1>Welcome to DevBatch App store</h1>
-
-<%= link_to image_tag("DevBatch_blue.png", alt: "DevBatch"), 'http://devbatch.com' %>
+<h1>DevBatch App Store</h1>
+</div>
+<%= link_to image_tag("DevBatch_blue.png", height: "70px", width: "70px", alt: "DevBatch App Store"), 'http://www.devbatch.com' %>
