--- a/app/views/products/_fields.html.erb
+++ b/app/views/products/_fields.html.erb
@@ -7,13 +7,13 @@
 <%= f.text_field :image_url %>
 
 <%= f.label :description %>
-<%= f.password_field :description, :rows => 6%>
+<%= f.text_field :description, :rows => 6%>
 
 <%= f.label :languages %>
 <%= f.text_field :languages %>
 
 <%= f.label :version %>
-<%= f.password_field :version %>
+<%= f.text_field :version %>
 
 <%= f.label :price %>
-<%= f.password_field :price %>
+<%= f.text_field :price %>
