--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,4 +2,9 @@
 <title>DevBatch App Store</title>
 <h1>DevBatch App Store</h1>
 </div>
-<%= link_to image_tag("DevBatch_blue.png", height: "70px", width: "70px", alt: "DevBatch App Store"), 'http://www.devbatch.com' %>
+
+<div>
+  <%= render "products/index" ,:locals => {:product => @product} %>
+</div>
+
+<%= link_to image_tag("DevBatch_blue.png", height: "60px", width: "100px", alt: "DevBatch App Store"), 'http://www.devbatch.com' %>
