--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,5 +1,25 @@
-<p id="notice"><%= notice %></p>
+<% provide(:title, "Cart") %>
+<%# @cart.line_items.each do |item| %>
+   <%#= item.product.title %>
+<%# end %>
 
 
-<%= link_to 'Edit', edit_cart_path(@cart) %> |
-<%= link_to 'Back', carts_path %>
+
+<h3>Your Cart</h3>
+<table>
+  <% for item in @cart.line_items %>
+      <tr>
+        <td><%= item.quantity %>&times;</td>
+        <td><%= item.product.title %></td>
+        <td class="item_price" ><%= number_to_currency(item.total_price) %></td>
+        <%#= link_to "Delete Item", [params[item]] insert a button that will delete individual item%>
+      </tr>
+  <% end %>
+  <tr class="total_line" >
+    <td colspan="2" >Total</td>
+    <td class="total_cell" ><%= number_to_currency(@cart.total_price) %></td>
+  </tr>
+</table>
+<%= button_to 'Empty cart' , @cart, :method => :delete,
+              :confirm => 'Are you sure?' %>
+<%= link_to "Purchase", new_order_path%>
