--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,6 +6,10 @@
         <ul class="nav pull-right">
           <li><%= link_to "Home",    root_path %></li>
           <li><%= link_to "Help",    help_path %></li>
+
+          <%# if admin_user %>
+              <li><%#= link_to "Cart", show_cart_path %></li>
+          <%# end  %>
           <% if signed_in? %>
               <li><%= link_to "Users", users_path %></li> <%# display only if the current user is admin %>
               <li id="fat-menu" class="dropdown">
@@ -30,3 +34,5 @@
     </div>
   </div>
 </header>
+
+
