--- a/app/views/products/_index.html.erb
+++ b/app/views/products/_index.html.erb
@@ -1,5 +1,6 @@
 <% @product.each do |product| %>
 
+     <div>
     <%= link_to image_tag(product.image_url, height: "50px", width: "50px",  alt: product.title)%>
 
     <%= product.title %>
@@ -7,6 +8,7 @@
     <span class="price"><%= number_to_currency(product.price) %></span>
 
     <%= button_to 'Add to Cart' , line_items_path(:product_id => product) %>
-
+     </div>
     <br />
 <% end %>
+
