--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,10 +1,10 @@
 <% provide(:title, 'Available Items') %>
 <h1>Available Items</h1>
 
-<%= will_paginate %>
+<%#= will_paginate %>
 
 <ul class="products">
   <%= render @products %>
 </ul>
 
-<%= will_paginate %>
+<%#= will_paginate %>
