--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -18,6 +18,7 @@ section {
   overflow: auto;
 }
 
+
 textarea {
   resize: vertical;
 }
@@ -25,7 +26,9 @@ textarea {
 .center {
   text-align: center;
   h1 {
-    margin-bottom: 10px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    //margin-bottom: 10px;
   }
 }
 
@@ -36,7 +39,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  font-size: 3em;
+  font-size: 2.5em;
   letter-spacing: -2px;
   margin-bottom: 30px;
   text-align: center;
@@ -161,24 +164,6 @@ footer {
     }
     }
 
-  /* products index homepage*/
-
-  #static_pages .product_title {
-    font: 120% bold;
-  }
-
-
-  container {
-    width: 600px;
-    height: 200px;
-    list-style: none;
-    display: inline;
-    background-color: #666;
-    div {
-      display: inline;
-    }
-  }
-
   /* miscellaneous */
 
   .debug_dump {
@@ -190,4 +175,8 @@ footer {
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
   }
+}
+
+.entry{
+  background-image:url("bg.png");
 }
