--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -20,6 +20,7 @@
     <td class="total_cell" ><%= number_to_currency(@cart.total_price) %></td>
   </tr>
 </table>
+<%= form.destroy "Delete", class: "btn btn-large btn-primary" %>
 <%= button_to 'Empty cart' , @cart, :method => :delete,
               :confirm => 'Are you sure?' %>
-<%= link_to "Purchase", new_order_path%>
+<%= button_to "Purchase" , new_order_path, :method => :get %>
