--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,15 +7,22 @@
   <%= csrf_meta_tags %>
   <%= render 'layouts/shim' %>
 </head>
+
 <body>
+<div id="Banner">
 <%= render 'layouts/header' %>
+</div>
 <div class="container">
   <% flash.each do |key, value| %>
       <%= content_tag(:div, value, class: "alert alert-#{key}") %>
   <% end %>
   <%= yield %>
 </div>
+<div class="Footer">
 <%= render 'layouts/footer' %>
+</div>
+<div>
 <%= debug(params) if Rails.env.development? %>
+</div>
 </body>
 </html>
