--- a/app/views/orders/_fields.html.erb
+++ b/app/views/orders/_fields.html.erb
@@ -1,6 +1,6 @@
 <%= render 'shared/error_messages', object: f.object %>
 
- <div class="field" >
+<div class="field" >
   <%= f.label :name %><br />
   <%= f.text_field :name, :size => 40 %>
 </div>
@@ -18,6 +18,7 @@
                :prompt => 'Select a payment method' %>
 </div>
 <div class="actions" >
-  <%= f.submit 'Place Order' %>
+  <%= f.submit 'Place Order', class: "btn btn-large btn-primary" %>
 </div>
+
 
