product can be displayed and edited

--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,8 +1,10 @@
 <div class="payment_form" >
 <div class="span6 offset3">
-  <%= form_for(:cart) do |f| %>
-      <%= render 'fields', f: f %>
-  <% end %>
+  <h1>Please enter your order details</h1>
+  <h2>Under Construction</h2>
+  <%#= form_for(@order) do |f| %>
+      <%#= render 'fields', f: f %>
+      <%#= render 'fields' %>
+  <%# end %>
 </div>
 </div>
-
