--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,9 +2,11 @@
 <div class="row">
   <aside class="span4">
     <section>
-      <h1>
-       <%= @user.name %>
-      </h1>
+      <h3>
+       <%= "User name: " + @user.name %>
+        <br />
+        <%= "Address: " + @user.address %>
+      </h3>
     </section>
   </aside>
 </div>
