--- a/app/views/products/_index.html.erb
+++ b/app/views/products/_index.html.erb
@@ -1,12 +1,14 @@
 <% @product.each do |product| %>
     <div class="entry">
         <%= link_to image_tag(product.image_url, height: "50px", width: "50px", alt: product.title), product %>
-        <h3><%= product.title %></h3>
-        <%= truncate(strip_tags(product.description), :length => 80) %>
-        <div>
+
+      <h3><%= product.title %></h3>
+      <%= truncate(strip_tags(product.description), :length => 80) %>
+
+      <div class="button-price">
         <span class="price"><%= number_to_currency(product.price) %></span>
         <%= button_to 'Add to Cart' , line_items_path(:product_id => product) %>
-        </div>
+      </div>
     </div>
   <br />
 <% end %>
