--- a/app/views/orders/_fields.html.erb
+++ b/app/views/orders/_fields.html.erb
@@ -1,23 +1,17 @@
 <%= render 'shared/error_messages', object: f.object %>
 
- <div class="field" >
   <%= f.label :name %><br />
-  <%#= f.text_field :name, :size => 40 %>
-</div>
-<div class="field" >
+  <%= f.text_field :name, :size => 40 %>
+
   <%= f.label :address %><br />
-  <%#= f.text_area :address, :rows => 3, :cols => 40 %>
-</div>
-<div class="field" >
+  <%= f.text_area :address, :rows => 3, :cols => 40 %>
+
   <%= f.label :email %><br />
-  <%#= f.email_field :email, :size => 40 %>
-</div>
-<div class="field" >
+  <%= f.email_field :email, :size => 40 %>
+
   <%= f.label :pay_type %><br />
-  <%#= f.select :pay_type, Order::PAYMENT_TYPES,
+  <%= f.select :pay_type, Order::PAYMENT_TYPES,
                :prompt => 'Select a payment method' %>
-</div>
-<div class="actions" >
-  <%#= f.submit 'Place Order' %>
-</div>
+
+  <%= f.submit 'Place Order' %>
 
