--- a/app/views/products/_index.html.erb
+++ b/app/views/products/_index.html.erb
@@ -1,11 +1,13 @@
 <% @product.each do |product| %>
     <div class="entry">
-        <%= link_to image_tag(product.image_url, height: "50px", width: "50px", alt: product.title), product %>
-
-      <h3><%= product.title %></h3>
-      <%= truncate(strip_tags(product.description), :length => 80) %>
-
-      <div class="button-price">
+        <div style="float: left; width: 80px;">
+            <%= link_to image_tag(product.image_url, height: "50px", width: "50px", alt: product.title), product %>
+        </div>
+      <div style="float: left;">
+        <h3><%= product.title %></h3>
+        <%= truncate(strip_tags(product.description), :rows => 3, :length => 100) %>
+      </div>
+      <div class="button-price" style="clear: both;">
         <span class="price"><%= number_to_currency(product.price) %></span>
         <%= button_to 'Add to Cart' , line_items_path(:product_id => product) %>
       </div>
