--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -82,6 +82,7 @@ p {
 footer {
   margin-top: 45px;
   padding-top: 5px;
+  padding-left: 10px;
   border-top: 1px solid $grayMediumLight;
   color: $grayLight;
   a {
@@ -170,6 +171,7 @@ input, textarea, select, .uneditable-input {
  }
 .entry form, .entry form div{
   display: inline;
+  padding-left: 1em;
 }
 
 /* users index */
