--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,12 +7,19 @@
           <li><%= link_to "Home",    root_path %></li>
           <li><%= link_to "Help",    help_path %></li>
 
-          <%# if admin_user %>
-              <li><%#= link_to "Cart", show_cart_path %></li>
-          <%# end  %>
           <% if signed_in? %>
-              <li><%= link_to "Add Product", new_product_path %></li>
-              <li><%= link_to "Users", users_path %></li> <%# display only if the current user is admin %>
+              <% if admin_user? %>
+                  <li id="fat-menu" class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                      Manage <b class="caret"></b>
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><%= link_to "Manage Users", users_path %></li>
+                      <li><%= link_to "View Orders", orders_path %></li>
+                      <li><%= link_to "Add Product", new_product_path %></li>
+                    </ul>
+                  </li>
+              <% end %>
               <li id="fat-menu" class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                   Account <b class="caret"></b>
