--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,6 +1,6 @@
 <li>
   <%= link_to user.name, user %>
-  <% if current_user.admin? && !current_user?(user) %>
+  <% if admin_user? && !current_user?(user) %>
       | <%= link_to "delete", user, method: :delete,
                     data: { confirm: "Are you sure to delete " + user.name + "?"} %>
   <% end %>
