--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "New Order") %>
 <div class="payment_form" >
 <div class="span6 offset3">
   <h1>Please enter your order details</h1>
